--- a/app/src/main/res/layout/delivery_status_products_credit_card.xml
+++ b/app/src/main/res/layout/delivery_status_products_credit_card.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#E2E2E2 "
     android:layout_height="match_parent">
 
     <ImageView
@@ -47,6 +48,7 @@
         android:layout_width="224dp"
         android:layout_height="46dp"
         android:layout_marginTop="8dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
@@ -68,6 +70,7 @@
         android:layout_width="39dp"
         android:layout_height="23dp"
         android:layout_marginTop="8dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.036"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
@@ -89,6 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/textView38"
         app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintStart_toStartOf="@+id/textView38"
