--- a/app/src/main/res/layout/fragment_admin_choose_order_for_delivery_tracker.xml
+++ b/app/src/main/res/layout/fragment_admin_choose_order_for_delivery_tracker.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="16dp"
         android:text="Create Delivery Tracker Location"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +46,7 @@
         android:layout_width="383dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
+        android:textColor="@color/black"
         android:text="Select the order to create the delivery tracker for customer to track their order location in maps"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -59,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:text="Order ID"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/spinnerAllOrderId"
         app:layout_constraintHorizontal_bias="0.333"
