--- a/app/src/main/res/layout/fragment_admin_update_delivery_status.xml
+++ b/app/src/main/res/layout/fragment_admin_update_delivery_status.xml
@@ -25,6 +25,7 @@
     <TextView
         android:id="@+id/labelDeliveryStatus"
         android:layout_width="wrap_content"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="@string/updateDeliveryStatus"
@@ -44,6 +45,7 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:layout_marginStart="127dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="127dp"
@@ -60,6 +62,7 @@
         android:layout_height="68dp"
         android:layout_marginTop="28dp"
         android:ems="10"
+        android:textColor="@color/black"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
+        android:textColor="@color/black"
         android:text="Date"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:textSize="16sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,6 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:textSize="16sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/textView25"
         app:layout_constraintStart_toStartOf="@+id/textView25"
         app:layout_constraintTop_toBottomOf="@+id/textView25" />
