--- a/app/src/main/res/layout/activity_delivery_tracker_maps.xml
+++ b/app/src/main/res/layout/activity_delivery_tracker_maps.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
+
+    <Button
+        android:id="@+id/buttonExit"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:textSize="20sp"
+        tools:ignore="SpeakableTextPresentCheck">
+
+    </Button>
+<androidx.fragment.app.FragmentContainerView
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
@@ -7,3 +21,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DeliveryTrackerMapsActivity" />
+
+</LinearLayout>
