--- a/app/src/main/res/layout/fragment__admin__view__all__delivery__status.xml
+++ b/app/src/main/res/layout/fragment__admin__view__all__delivery__status.xml
@@ -14,6 +14,7 @@
         android:text="Delivery Status(Cash On Delivery)"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
