--- a/app/src/main/res/layout/fragment_admin_update_delivery_status_credit_card.xml
+++ b/app/src/main/res/layout/fragment_admin_update_delivery_status_credit_card.xml
@@ -11,6 +11,7 @@
         android:id="@+id/textView65"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:layout_marginTop="16dp"
         android:text="Update Delivery Status(Credit Card)"
         android:textSize="24sp"
@@ -22,6 +23,7 @@
         android:id="@+id/labelDelivStatusId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:layout_marginTop="28dp"
         android:text="Delivery Status ID"
         android:textSize="20sp"
@@ -34,6 +36,7 @@
         android:id="@+id/outputDelivStatusId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="@+id/labelDelivStatusId"
         app:layout_constraintHorizontal_bias="0.494"
@@ -46,6 +49,7 @@
         android:layout_height="63dp"
         android:layout_marginTop="96dp"
         android:ems="10"
+        android:textColor="@color/black"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
