--- a/app/src/main/res/layout/fragment_admin_view_all_delivery_status_credit_card.xml
+++ b/app/src/main/res/layout/fragment_admin_view_all_delivery_status_credit_card.xml
@@ -12,6 +12,7 @@
         android:layout_width="402dp"
         android:layout_height="65dp"
         android:layout_marginTop="16dp"
+        android:textColor="@color/black"
         android:text="Delivery Status(Credit Card Payment)"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
