--- a/app/src/main/res/layout/fragment_admin_view_feedback.xml
+++ b/app/src/main/res/layout/fragment_admin_view_feedback.xml
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:textColor="@color/black"
         android:text="Review Customer Feedback"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
