--- a/app/src/main/res/layout/fragment_cust_delivery_status.xml
+++ b/app/src/main/res/layout/fragment_cust_delivery_status.xml
@@ -38,9 +38,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:textColor="@color/black"
             android:layout_marginTop="24dp"
-            android:text="Order Purchased Date"
+            android:text="@string/dateOfOrderPlaced"
+            android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/outputOrderIdd" />
@@ -141,10 +141,11 @@
 
         <Button
             android:id="@+id/btnComplete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="260dp"
+            android:layout_height="49dp"
             android:layout_marginTop="40dp"
             android:text="Complete"
+            android:backgroundTint="#FDC12A"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
