ruth - fix some stuff

--- a/app/src/main/res/layout/activity_delivery_tracker_maps.xml
+++ b/app/src/main/res/layout/activity_delivery_tracker_maps.xml
@@ -10,6 +10,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:textSize="20sp"
+        android:text="Exit Delivery Tracker Map"
         tools:ignore="SpeakableTextPresentCheck">
 
     </Button>
