--- a/app/src/main/res/layout/activity_admin_create_update_delivery_tracker_location.xml
+++ b/app/src/main/res/layout/activity_admin_create_update_delivery_tracker_location.xml
@@ -14,11 +14,23 @@
 
     <Button
         android:id="@+id/btnSavelocation"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:backgroundTint="#FDC12A"
         android:text="Save Location" />
 
-<fragment xmlns:map="http://schemas.android.com/apk/res-auto"
+    <Button
+        android:id="@+id/buttonExitMap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="100dp"
+        android:textColor="@color/black"
+        android:backgroundTint="#FDC12A"
+        android:text="Exit Map" />
+
+    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
