ruth - fix some stuff

--- a/app/src/main/res/layout/fragment_create_delivery_status.xml
+++ b/app/src/main/res/layout/fragment_create_delivery_status.xml
@@ -5,11 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.CreateDeliveryStatus">
+    tools:context="Admin.CreateDeliveryStatus">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/frameLayout7"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
 
     <TextView
