--- a/app/src/main/res/layout/delivery_service_rate.xml
+++ b/app/src/main/res/layout/delivery_service_rate.xml
@@ -12,21 +12,15 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/labelFeedbackId"
+            android:id="@+id/deliveryFeedbackId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black" />
-
-        <TextView
-            android:id="@+id/outputDateOfRating"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Date of Feedback:"
+            android:text="Delivery Feedback ID:"
             android:textColor="@color/black"
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/labelRatings"
+            android:id="@+id/textView76"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Ratings:"
@@ -34,39 +28,17 @@
             android:textSize="16sp" />
 
         <RatingBar
-            android:id="@+id/ratingBarNew"
+            android:id="@+id/ratingBarRateDelivery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="70dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="70dp"
-            android:isIndicator="true"
             android:numStars="5"
             tools:ignore="SpeakableTextPresentCheck" />
 
-        <TextView
-            android:id="@+id/labelComments"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/comments"
-            android:textColor="@color/black" />
-
-        <TextView
-            android:id="@+id/feedbackText"
-            android:layout_width="382dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="10dp"
-            android:background="#F3F3F3"
-            android:fontFamily="sans-serif"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-
         <ImageButton
-            android:id="@+id/imageButtonDelete"
+            android:id="@+id/imageButtonDelete2"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
@@ -76,6 +48,5 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_baseline_delete_24"
             tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
-
     </LinearLayout>
 </androidx.cardview.widget.CardView>
