ruth - fix some stuff

--- a/app/src/main/res/layout/fragment_admin_feedback_management.xml
+++ b/app/src/main/res/layout/fragment_admin_feedback_management.xml
@@ -16,11 +16,13 @@
             android:id="@+id/textView79"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="32dp"
             android:text="Feedback Management"
+            android:textColor="#FDC12A"
             android:textSize="30sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.494"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
