--- a/app/src/main/res/layout/fragment_admin_view_all_delivery_feedback.xml
+++ b/app/src/main/res/layout/fragment_admin_view_all_delivery_feedback.xml
@@ -17,7 +17,7 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,7 +25,7 @@
         android:id="@+id/recyclerViewAllRateFeedback"
         android:layout_width="426dp"
         android:layout_height="635dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView78"
