--- a/app/src/main/res/navigation/admin_navigation.xml
+++ b/app/src/main/res/navigation/admin_navigation.xml
@@ -312,7 +312,11 @@
         android:id="@+id/adminUpdateDeliveryStatus"
         android:name="tarc.edu.carpartsapp.Admin.AdminUpdateDeliveryStatus"
         android:label="fragment_admin_update_delivery_status"
-        tools:layout="@layout/fragment_admin_update_delivery_status" />
+        tools:layout="@layout/fragment_admin_update_delivery_status" >
+        <action
+            android:id="@+id/action_adminUpdateDeliveryStatus_to_fragmentChooseView"
+            app:destination="@id/fragmentChooseView" />
+    </fragment>
     <fragment
         android:id="@+id/nav_returnProduct_admin"
         android:name="tarc.edu.carpartsapp.Admin.ReturnProductAdminFragment"
@@ -380,7 +384,11 @@
         android:id="@+id/fragmentAdminUpdateDeliveryStatusCreditCard"
         android:name="tarc.edu.carpartsapp.FragmentAdminUpdateDeliveryStatusCreditCard"
         android:label="fragment_admin_update_delivery_status_credit_card"
-        tools:layout="@layout/fragment_admin_update_delivery_status_credit_card" />
+        tools:layout="@layout/fragment_admin_update_delivery_status_credit_card" >
+        <action
+            android:id="@+id/action_fragmentAdminUpdateDeliveryStatusCreditCard_to_fragmentAdminViewAllDeliveryStatusCreditCard"
+            app:destination="@id/fragmentAdminViewAllDeliveryStatusCreditCard" />
+    </fragment>
     <fragment
         android:id="@+id/fragmentAdminChooseOrderForDeliveryTracker"
         android:name="tarc.edu.carpartsapp.Admin.FragmentAdminChooseOrderForDeliveryTracker"
