ruth - fix some stuff

--- a/app/src/main/res/navigation/admin_navigation.xml
+++ b/app/src/main/res/navigation/admin_navigation.xml
@@ -388,6 +388,9 @@
         <action
             android:id="@+id/action_fragmentAdminUpdateDeliveryStatusCreditCard_to_fragmentAdminViewAllDeliveryStatusCreditCard"
             app:destination="@id/fragmentAdminViewAllDeliveryStatusCreditCard" />
+        <action
+            android:id="@+id/action_fragmentAdminUpdateDeliveryStatusCreditCard_to_fragmentChooseView"
+            app:destination="@id/fragmentChooseView" />
     </fragment>
     <fragment
         android:id="@+id/fragmentAdminChooseOrderForDeliveryTracker"
