--- a/app/src/main/res/layout/fragment_create_delivery_status.xml
+++ b/app/src/main/res/layout/fragment_create_delivery_status.xml
@@ -121,6 +121,7 @@
         android:layout_marginTop="40dp"
         android:text="User ID"
         android:textColor="@color/black"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/textView45"
         app:layout_constraintHorizontal_bias="0.083"
         app:layout_constraintStart_toStartOf="@+id/textView45"
@@ -131,8 +132,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:textSize="16sp"
         android:textColor="@color/black"
+        android:textSize="16sp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/outputCurrentDate"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/outputCurrentDate"
@@ -193,6 +195,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:text="Order Amount"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/labelUID"
         app:layout_constraintHorizontal_bias="0.255"
         app:layout_constraintStart_toStartOf="@+id/labelUID"
@@ -203,6 +206,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/outputUserid"
         app:layout_constraintHorizontal_bias="0.362"
         app:layout_constraintStart_toStartOf="@+id/outputUserid"
